update icons, try workaround for 100vh bug on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -630,9 +630,10 @@ a {
 
   .modal {
     top: 5vh;
-    height: 90vh;
+    /* height: 90vh; */
     /* height: calc(-webkit-fill-available); */
-    height: calc(100vh - calc(100vh - 100%));
+    /* max-height: -webkit-fill-available; */
+    /* height: calc(100vh - calc(100vh - 100%)); */
     /* top: 5vh; */
     /* bottom: calc(5vh + env(safe-area-inset-bottom)); */
     /* height: calc(90vh - env(safe-area-inset-bottom)); */
